# QtPiDeckServer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  QtPiDeckServer.pro  README.md  cpp.hint
.github/workflows/: clang-tidy.yml  code-coverage.yml  qmake.yml  run-tests.yml  server-workflow.yml
QtPiDeckServer/: CMakeLists.txt  QtPiDeckServer.pro  main.cpp  qml.qrc
QtPiDeckServer/QtPiDeckServer/: CMakeLists.txt
QtPiDeckServer/QtPiDeckServer/src/: main.cpp
QtPiDeckServer/QtPiDeckServerLib/: CMakeLists.txt
QtPiDeckServer/QtPiDeckServerLib/include/: QtPiDeckServerDefines.hpp  QtPiDeckServerDefinitions.hpp  ServerApplication.hpp  tmp_init.hpp
QtPiDeckServer/QtPiDeckServerLib/include/Bus/: ObsMessages.hpp
QtPiDeckServer/QtPiDeckServerLib/include/Network/: DeckServer.hpp  DeckServer.inl
QtPiDeckServer/QtPiDeckServerLib/include/Network/Obs/: GetAuthRequiredResponse.hpp  ObsObjectsParsing.hpp  ObsRequests.hpp  ObsResponseStatus.hpp  ObsWebsocketClient.hpp
QtPiDeckServer/QtPiDeckServerLib/include/Network/Obs/Models/: GetAuthRequiredResponse.hpp  ObsResponseStatus.hpp
QtPiDeckServer/QtPiDeckServerLib/include/Services/: IObsMessageIdGenerator.hpp  IServerSettingsStorage.hpp  IWebSocket.hpp  ObsMessageIdGenerator.hpp  SettingsStorage.hpp  WebSocketQt.hpp  WebSocketpp.hpp
QtPiDeckServer/QtPiDeckServerLib/include/ViewModels/: SettingsViewModel.hpp
QtPiDeckServer/QtPiDeckServerLib/qml/pages/: main.qml
QtPiDeckServer/QtPiDeckServerLib/src/: ServerApplication.cpp  tmp_init.cpp
QtPiDeckServer/QtPiDeckServerLib/src/Network/: DeckServer.cpp
QtPiDeckServer/QtPiDeckServerLib/src/Network/Obs/: ObsObjectsParsing.cpp  ObsWebsocketClient.cpp
QtPiDeckServer/QtPiDeckServerLib/src/Services/: SettingsStorage.cpp  WebSocketQt.cpp  WebSocketpp.cpp
QtPiDeckServer/QtPiDeckServerLib/src/ViewModels/: SettingsViewModel.cpp
QtPiDeckServer/src/: main.cpp
Tests/: CMakeLists.txt
Tests/QtPiDeck/Network/Obs/ObsWebsocketClientTests/: CMakeLists.txt  main.cpp
Tests/QtPiDeck/Services/ObsMessageIdGeneratorTests/: CMakeLists.txt  main.cpp
Tests/QtPiDeckServerCodeTests/: CMakeLists.txt
Tests/QtPiDeckServerCodeTests/src/: main.cpp
Tests/QtPiDeckServerCodeTests/src/Network/: DeckServerTests.cpp
Tests/QtPiDeckServerCodeTests/src/Network/Obs/: GetAuthRequiredResponseTests.cpp  ObsObjectsParsingTests.cpp  ObsWebsocketClientTests.cpp
Tests/QtPiDeckServerCodeTests/src/Network/Obs/Models/: GetAuthRequiredResponseTests.cpp
Tests/QtPiDeckServerCodeTests/src/Services/: ObsMessageIdGeneratorTests.cpp
Tests/QtPiDeckServerCodeTests/src/ViewModels/: SettingsViewModelTests.cpp
scripts/: cc.py  cxx.py  triplet.py  vcpkgCacheKey.py  vcpkgPackages.py
scripts/vcpkgServer/: depList.py
try_compile/: ranges.cpp
